base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-deployment-service
  namespace: argo-deployment
spec:
  type: ClusterIP
  selector:
    app: argo-deployment
  ports:
  - port: 80
    targetPort: 80
