base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-deployment
  namespace: argo-deployment
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argo.akstest.tech
    secretName: tls-secret
  rules:
  - host: argo.akstest.tech
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argo-deployment-service
            port:
              number: 80
